Remove mockito and bytebuddy warnings. (#15421)